--- a/examples/dashboard.html
+++ b/examples/dashboard.html
@@ -91,7 +91,7 @@ The above copyright notice and this permission notice shall be included in all c
                         </a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link" href="./Template.html">
+                        <a class="nav-link" href="./template.html">
                             <i class="nc-icon nc-satisfied"></i>
                             <p>Template</p>
                         </a>
