--- a/examples/template.html
+++ b/examples/template.html
@@ -557,7 +557,7 @@ The above copyright notice and this permission notice shall be included in all c
                                             <tr>
                                                 <td></td>
                                                 <td>9</td>
-                                                <td>Illana Nelson</td>
+                                                <td>Illana Nelson a</td>
                                                 <td>$56,142</td>
                                                 <td>Heard Island</td>
                                                 <td>Montone</td>
